--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
+    "swiper": "^11.2.8",
     "vue": "^3.4.37",
     "vue-i18n": "^10.0.1",
     "vue-router": "^4.4.5"
